--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,9 @@ server.port=8300
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/product_db
-spring.datasource.username=root
-spring.datasource.password=root
-
-eureka.client.service-url.defaultZone=http://localhost:2222/eureka
+spring.datasource.url=jdbc:mysql://database-1.cyezdxlcx23f.us-east-2.rds.amazonaws.com:3306/product_db
+spring.datasource.username=admin
+spring.datasource.password=password
 
 
 #Exceptions in validator
