--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
     commands:
       - echo Logging into Amazon ECR
       - aws --version
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/h9z7c8y1
+      - aws ecr-public get-login-password --region us-east-2 | docker login --username AWS --password-stdin 541475473576.dkr.ecr.us-east-2.amazonaws.com
       - REPOSITORY_URI=public.ecr.aws/h9z7c8y1/productecrrepo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
