--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,8 @@ phases:
     commands:
       - echo Logging into Amazon ECR
       - aws --version
-      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 541475473576.dkr.ecr.us-east-2.amazonaws.com
-      - REPOSITORY_URI=541475473576.dkr.ecr.us-east-2.amazonaws.com/newprodrepo
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 325485124423.dkr.ecr.ap-south-1.amazonaws.com
+      - REPOSITORY_URI=325485124423.dkr.ecr.ap-south-1.amazonaws.com/productrepo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
       - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
