--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8300
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://database-1.cyezdxlcx23f.us-east-2.rds.amazonaws.com:3306/product_db
-spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://database-2.cdaabt7yaua7.ap-south-1.rds.amazonaws.com:3306/fa4db
+spring.datasource.username=Ashu1998
+spring.datasource.password=Ashutosh1998
 
 
 #Exceptions in validator
